# Compiler

./: Dockerfile  README.md  create.sh  login.sh  start.sh
ArithmeticalInterpreter/: CMakeLists.txt  driver.cpp  driver.h  location.hh  main.cpp  parser.cpp  parser.h  parser.y  scanner.cpp  scanner.h
ArithmeticalInterpreter/test/: compile.sh  test1.txt  test2.txt
Compiler/: CMakeLists.txt  README.md  compile.sh  driver.cpp  driver.h  include_list.h  main.cpp  parser.y  scanner.h  scanner.l
Compiler/Arguments/: Formals.cpp  Formals.h  FunctionArguments.cpp  FunctionArguments.h
Compiler/ClassDeclaration/: ClassDeclaration.h  ClassDeclarationInheritted.cpp  ClassDeclarationInheritted.h  ClassDeclarationList.cpp  ClassDeclarationList.h  ClassDeclarationSimple.cpp  ClassDeclarationSimple.h
Compiler/Classes/: Class.cpp  Class.h  ClassManager.cpp  ClassManager.h  ClassManagerCreator.cpp  ClassManagerCreator.h  FieldVisitor.cpp  FieldVisitor.h
Compiler/Core/: MainClass.cpp  MainClass.h  Program.cpp  Program.h  SizeManager.cpp  SizeManager.h  TreeNode.h
Compiler/Declaration/: Declaration.h  DeclarationList.cpp  DeclarationList.h  DeclarationMethod.cpp  DeclarationMethod.h  DeclarationVariable.cpp  DeclarationVariable.h  MethodDeclaration.cpp  MethodDeclaration.h  VariableDeclaration.cpp  VariableDeclaration.h
Compiler/Expression/: Expression.h  ExpressionAdd.cpp  ExpressionAdd.h  ExpressionAnd.cpp  ExpressionAnd.h  ExpressionArrayElement.cpp  ExpressionArrayElement.h  ExpressionBraces.cpp  ExpressionBraces.h  ExpressionDiv.cpp  ExpressionDiv.h  ExpressionEqual.cpp  ExpressionEqual.h  ExpressionFalse.cpp  ExpressionFalse.h  ExpressionGreater.cpp  ExpressionGreater.h  ExpressionLength.cpp  ExpressionLength.h  ExpressionLess.cpp  ExpressionLess.h  ExpressionMethodInvocation.cpp  ExpressionMethodInvocation.h  ExpressionMod.cpp  ExpressionMod.h  ExpressionMul.cpp  ExpressionMul.h  ExpressionNewArray.cpp  ExpressionNewArray.h  ExpressionNewVariable.cpp  ExpressionNewVariable.h  ExpressionNot.cpp  ExpressionNot.h  ExpressionNumber.cpp  ExpressionNumber.h  ExpressionOr.cpp  ExpressionOr.h  ExpressionSub.cpp  ExpressionSub.h  ExpressionThis.cpp  (+5 more)
Compiler/Functions/: Function.cpp  Function.h  FunctionManager.cpp  FunctionManager.h  Stack.cpp  Stack.h
Compiler/LValue/: ArrayElementLValue.cpp  ArrayElementLValue.h  LValue.h  LValueArrayElement.cpp  LValueArrayElement.h  LValueSimple.cpp  LValueSimple.h  SimpleLValue.cpp  SimpleLValue.h
Compiler/Method/: MethodInvocation.cpp  MethodInvocation.h
Compiler/Object/: BooleanValue.cpp  BooleanValue.h  IntegerValue.cpp  IntegerValue.h  Object.cpp  Object.h  Value.h
Compiler/Scopes/: ScopeLayer.cpp  ScopeLayer.h  SymbolTable.cpp  SymbolTable.h  TypesScopeLayer.cpp  TypesScopeLayer.h
Compiler/Statement/: Statement.h  StatementAssert.cpp  StatementAssert.h  StatementAssignment.cpp  StatementAssignment.h  StatementIfFull.cpp  StatementIfFull.h  StatementIfReduced.cpp  StatementIfReduced.h  StatementList.cpp  StatementList.h  StatementMethodInvocation.cpp  StatementMethodInvocation.h  StatementNewScope.cpp  StatementNewScope.h  StatementPrint.cpp  StatementPrint.h  StatementReturn.cpp  StatementReturn.h  StatementVariableDeclaration.cpp  StatementVariableDeclaration.h  StatementWhile.cpp  StatementWhile.h
Compiler/Type/: ArrayType.cpp  ArrayType.h  SimpleType.cpp  SimpleType.h  Type.cpp  Type.h  TypeArray.cpp  TypeArray.h  TypeSimple.cpp  TypeSimple.h
Compiler/Visitor/: ClassManagerCreator.cpp  ClassManagerCreator.h  FunctionManagerCreator.cpp  FunctionManagerCreator.h  Interpreter.cpp  Interpreter.h  MainInterpreter.cpp  MainInterpreter.h  TreePrinter.cpp  TreePrinter.h  TypeChecker.cpp  TypeChecker.h  TypeGetter.cpp  TypeGetter.h  Visitor.h
Compiler/tests/: test_ce.sh  test_interpreter.sh  test_printer.sh
Compiler/tests/CE/: FunctionArgumentsCount.txt  FunctionArgumentsTypes.txt  Redeclaration.txt
Compiler/tests/Interpreting/: Array.txt  BoolAndIntCorrect.txt  BoolAndIntIncorrect.txt  CallInCall.txt  Field.txt  IntToBool.txt  Interpreter.txt  Shadowing.txt  TwoClasses.txt
Compiler/tests/Printing/: Arithmetical.txt  Condition.txt  Methods.txt
MiniJavaInterpreter/: location.hh  main.cpp  parser.y  scanner.l
